Replace Collectors.toList() with toList()